--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
+TWILO_SID="AC7dc7c9e75f962ee6878377ad54a260e7"
+TWILO_TOKEN="c7af511ff506c76e6d2a7cd55bb38b95"
+TWILO_MSG_SID="MGe1d702ad604bd7beb0b55721a22530f1"
+TWILO_PHONE="+821026729751"
+SEND_GRID_API_KEY="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"
